--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,22 @@
 version: 2.1
+executors:
+  docker-executor:
+    docker:
+      - image: circleci/node:18.16.0
 
 jobs:
   build:
-    docker:
-      - image: circleci/node:latest
+    executor: docker-executor
     steps:
       - checkout
       - run:
           name: Install dependencies
           command: npm install
+      - setup_remote_docker:
+          version: 20.10.7
       - run:
-          name: Run tests
-          command: npm test
+          name: Build Docker image
+          command: docker build -t my-app .
 
 workflows:
   version: 2
