--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,15 +15,17 @@ jobs:
           command: docker build -t mon-app:latest .
       - run:
           name: Run Container
-          command: docker run -d -p 3000:3000 --name test-container mon-app:latest
+          command: docker run -d -p 8080:8080 --name test-container mon-app:latest
       - run:
           name: Test if app is responding
           command: |
             sleep 5  # Attendre que le container démarre
-            curl --fail http://localhost:3000 || exit 1
+            curl --fail http://127.0.0.1:8080 || exit 1
 
 workflows:
   version: 2
   build_and_test:
     jobs:
       - build
+
+
