--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,10 @@ jobs:
           command: |
             echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
       - run:
-          name: Push Docker image to Docker Hub
-          command: docker push mon-app:latest
+          name: Tag and Push Image
+          command: |
+            docker tag mon-app:latest "$DOCKERHUB_USERNAME"/mon-app:latest
+            docker push "$DOCKERHUB_USERNAME"/mon-app:latest
 
 workflows:
   version: 2
