--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,65 +1,20 @@
-# version: 2.1
-
-# jobs:
-#   build:
-#     machine:  # Utilisation d'une machine virtuelle au lieu d'un conteneur Docker
-#       image: ubuntu-2204:current  # Image Ubuntu avec Docker préinstallé
-#     steps:
-#       - checkout  # Récupère le code du repo
-#       - run:
-#           name: Check Docker Version
-#           command: docker --version
-#       - run:
-#           name: Build Docker image
-#           command: docker build -t mon-app:latest .
-#       - run:
-#           name: Run Container
-#           command: docker run -d -p 8080:8080 --name test-container mon-app:latest
-#       - run:
-#           name: Debug - Liste des conteneurs
-#           command: docker ps -a
-#       - run:
-#           name: Test if app is responding
-#           command: |
-#             sleep 5  # Attendre que le container démarre
-#             curl --fail http://127.0.0.1:8080 || exit 1
-#       - run:
-#           name: Login to Docker Hub
-#           command: |
-#             echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-#       - run:
-#           name: Tag and Push Image
-#           command: |
-#             docker tag mon-app:latest "$DOCKERHUB_USERNAME"/mon-app:latest
-#             docker push "$DOCKERHUB_USERNAME"/mon-app:latest
-
-# workflows:
-#   version: 2
-#   build_and_test:
-#     jobs:
-#       - build
-
-
 version: 2.1
-
-orbs:
-  docker: circleci/docker@2.3.0  # Utilisation de l'orbe Docker
 
 jobs:
   build:
-    machine:
-      image: ubuntu-2204:current
+    machine:  # Utilisation d'une machine virtuelle au lieu d'un conteneur Docker
+      image: ubuntu-2204:current  # Image Ubuntu avec Docker préinstallé
     steps:
-      - checkout
+      - checkout  # Récupère le code du repo
       - run:
           name: Check Docker Version
           command: docker --version
-      - docker/build:  # Utilisation de l'orbe pour builder l’image
-          image: "$DOCKERHUB_USERNAME/mon-app"
-          tag: "latest"
+      - run:
+          name: Build Docker image
+          command: docker build -t mon-app:latest .
       - run:
           name: Run Container
-          command: docker run -d -p 8080:8080 --name test-container "$DOCKERHUB_USERNAME/mon-app:latest"
+          command: docker run -d -p 8080:8080 --name test-container mon-app:latest
       - run:
           name: Debug - Liste des conteneurs
           command: docker ps -a
@@ -68,13 +23,58 @@ jobs:
           command: |
             sleep 5  # Attendre que le container démarre
             curl --fail http://127.0.0.1:8080 || exit 1
-      - docker/push:  # Utilisation de l’orbe pour push l’image
-          image: "$DOCKERHUB_USERNAME/mon-app"
-          tag: "latest"
+      - run:
+          name: Login to Docker Hub
+          command: |
+            echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+      - run:
+          name: Tag and Push Image
+          command: |
+            docker tag mon-app:latest "$DOCKERHUB_USERNAME"/mon-app:latest
+            docker push "$DOCKERHUB_USERNAME"/mon-app:latest
 
 workflows:
   version: 2
   build_and_test:
     jobs:
       - build
+
+
+# version: 2.1
+
+# orbs:
+#   docker: circleci/docker@2.3.0  # Utilisation de l'orbe Docker
+
+# jobs:
+#   build:
+#     machine:
+#       image: ubuntu-2204:current
+#     steps:
+#       - checkout
+#       - run:
+#           name: Check Docker Version
+#           command: docker --version
+#       - docker/build:  # Utilisation de l'orbe pour builder l’image
+#           image: "$DOCKERHUB_USERNAME/mon-app"
+#           tag: "latest"
+#       - run:
+#           name: Run Container
+#           command: docker run -d -p 8080:8080 --name test-container "$DOCKERHUB_USERNAME/mon-app:latest"
+#       - run:
+#           name: Debug - Liste des conteneurs
+#           command: docker ps -a
+#       - run:
+#           name: Test if app is responding
+#           command: |
+#             sleep 5  # Attendre que le container démarre
+#             curl --fail http://127.0.0.1:8080 || exit 1
+#       - docker/push:  # Utilisation de l’orbe pour push l’image
+#           image: "$DOCKERHUB_USERNAME/mon-app"
+#           tag: "latest"
+
+# workflows:
+#   version: 2
+#   build_and_test:
+#     jobs:
+#       - build
 
